the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-todo-app
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app
          image: ipegii/the_project:1.13
          imagePullPolicy: Always
          volumeMounts: # Mount volume
          - name: shared-todo-app
            mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
