the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http-todo-app
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: http-todo-backend
      port: 2346
      protocol: TCP
      targetPort: 3001
